# confetti

./: .confetti.yml  .gitignore  CHANGELOG.md  README.html  README.md  build-binary.sh  confetti-1.0.1.dhall  confetti.cabal  stack.yaml
app/: Main.hs
src/: Confetti.hs  Lib.hs
test/: Main.hs
