name:                confetti
version:             0.1.0.0
-- synopsis:
-- description:

license:             ISC
--license-file:        LICENSE
author:              TODO:<Author name here>
maintainer:          TODO:<example@example.com>
copyright:           © 2017 TODO:<Author name here>
homepage:            https://github.com/TODO:<githubuser>/confetti
bug-reports:         https://github.com/TODO:<githubuser>/confetti/issues

category:            Test
build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/TODO:<githubuser>/confetti

library
  default-language:  Haskell2010
  --ghc-options:       -Wall -Werror -O2
  hs-source-dirs:    src
  exposed-modules:   Lib
  build-depends:     base >= 4.8 && < 5
                   , directory >= 1.3.1.1
                   , text
                   , text >= 1.2.2.1
                   , unix
                   , MissingH
                   , yaml

executable confetti-exe
  default-language:  Haskell2010
  --ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    app
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , confetti
                   , text >= 1.2.2.1

test-suite confetti-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  --ghc-options:       -Wall -Werror -O2 -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs:    test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , confetti
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , text >= 1.2.2.1

