name:                confetti
version:             0.3.2
synopsis:            A simple config file swapping tool
category:            Command Line Tools
description:         See the README on GitHub at <https://github.com/aviaviavi/confetti#readme>

license:             MIT
license-file:        LICENSE
author:              Avi Press
maintainer:          avipress@gmail.com
homepage:            https://github.com/aviaviavi/confetti
bug-reports:         https://github.com/aviaviavi/confetti/issues

build-type:          Simple
stability:           alpha (experimental)
cabal-version:       >=1.10

extra-source-files:
  README.md
  stack.yaml

source-repository head
  type:     git
  location: https://github.com/aviaviavi/confetti

library
  default-language:  Haskell2010
  hs-source-dirs:    src
  exposed-modules:   Confetti
  build-depends:     base >= 4.8 && < 5
                   , directory
                   , text
                   , text >= 1.2.2.1
                   , unix
                   , MissingH
                   , time
                   , yaml
                   , filepath
  other-modules:
      Paths_confetti

executable confetti
  default-language:  Haskell2010
  hs-source-dirs:    app
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , directory
                   , confetti
                   , text >= 1.2.2.1
  other-modules:
      Paths_confetti

test-suite confetti-test
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  hs-source-dirs:    test
  main-is:           Main.hs
  build-depends:     base >= 4.8 && < 5
                   , confetti
                   , tasty >= 0.11
                   , tasty-hunit >= 0.9
                   , tasty-smallcheck >= 0.8
                   , text >= 1.2.2.1

